airflow/logs/dag_id=Gold_training_Pipeline/run_id=manual__2024-10-03T105343.516078+0000/task_id=preprocess_the_extracted_data/attempt=3.log
[2024-10-03T10:54:07.108+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Gold_training_Pipeline.preprocess_the_extracted_data manual__2024-10-03T10:53:43.516078+00:00 [queued]>
[2024-10-03T10:54:07.115+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Gold_training_Pipeline.preprocess_the_extracted_data manual__2024-10-03T10:53:43.516078+00:00 [queued]>
[2024-10-03T10:54:07.116+0000] {taskinstance.py:2193} INFO - Starting attempt 3 of 4
[2024-10-03T10:54:07.127+0000] {taskinstance.py:2217} INFO - Executing <Task(PythonOperator): preprocess_the_extracted_data> on 2024-10-03 10:53:43.516078+00:00
[2024-10-03T10:54:07.131+0000] {standard_task_runner.py:60} INFO - Started process 419 to run task
[2024-10-03T10:54:07.134+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Gold_training_Pipeline', 'preprocess_the_extracted_data', 'manual__2024-10-03T10:53:43.516078+00:00', '--job-id', '211', '--raw', '--subdir', 'DAGS_FOLDER/gold_training_pipeline.py', '--cfg-path', '/tmp/tmpj4w6xgsq']
[2024-10-03T10:54:07.136+0000] {standard_task_runner.py:88} INFO - Job 211: Subtask preprocess_the_extracted_data
[2024-10-03T10:54:07.243+0000] {task_command.py:423} INFO - Running <TaskInstance: Gold_training_Pipeline.preprocess_the_extracted_data manual__2024-10-03T10:53:43.516078+00:00 [running]> on host 5466e3b84b5d
[2024-10-03T10:54:07.291+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='sdeshan' AIRFLOW_CTX_DAG_ID='Gold_training_Pipeline' AIRFLOW_CTX_TASK_ID='preprocess_the_extracted_data' AIRFLOW_CTX_EXECUTION_DATE='2024-10-03T10:53:43.516078+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-03T10:53:43.516078+00:00'
[2024-10-03T10:54:07.321+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/components/gold/model_training/data_preprocessing.py", line 18, in preprocess_data
    create_table(data_table,
  File "/opt/airflow/dags/components/utils/database_table_creation.py", line 20, in create_table
    cur.execute(f"""
psycopg2.errors.SyntaxError: syntax error at or near "&"
LINE 3: ...price_usd VARCHAR(255),silver_price VARCHAR(255),s&p_500_ind...
                                                             ^

[2024-10-03T10:54:07.348+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=Gold_training_Pipeline, task_id=preprocess_the_extracted_data, execution_date=20241003T105343, start_date=20241003T105407, end_date=20241003T105407
[2024-10-03T10:54:07.356+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 211 for task preprocess_the_extracted_data (syntax error at or near "&"
LINE 3: ...price_usd VARCHAR(255),silver_price VARCHAR(255),s&p_500_ind...
                                                             ^
; 419)
[2024-10-03T10:54:07.386+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-10-03T10:54:07.494+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
